fix alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1055,7 +1055,7 @@ section {
 }
 
 .center_image_3 {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
 }
 div.container_left {
